<resources>
    <string name="app_name">FastClas</string>
    <string name="app_name_caps">FASTCLASS</string>
    <string name="login">LOGIN</string>
    <string name="emailphone">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="donthaveanaccount">Don"'"t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="submit">SUBMIT</string>
    <string name="registration">REGISTRATION</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="phoneno">Phone Number</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="state">State</string>
    <string name="university">University / Board</string>
    <string name="course">Course</string>
    <string name="courses">Course : </string>
    <string name="semesters">Semester / Year : </string>
    <string name="semester">Semester / Year</string>
    <string name="termsandconditions">By Clicking Register , You Are Agree To The Fastclas \n <u><font color="#4756A0">Terms And Conditions Policy</font></u></string>
    <string name="termsandconditions_payment">By Selecting, You Are Agree To The Fastclas \n <u><font color="#4756A0">Terms And Conditions Policy</font></u></string>
    <string name="alreadyhaveanaccount">Already Have An Account? <b>Log In</b></string>
    <string name="powered_by">Powered by - Versatile Mobitech Pvt. Ltd.</string>
    <string name="otptext">One Time Password(OTP) has been sent to your mobile , Please Enter the same here to complete your registration</string>
    <string name="question">Question</string>
    <string name="myprofile">My Profile</string>
    <string name="aboutus">About Fastclas</string>
    <string name="editprofile">Edit Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="termsconditions">Terms and Conditions</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="abouttext"><i>"Learning gives creativity, Creativity leads to thinking, Thinking provides knowledge, Knowledge makes you great"</i>
        \n\n<b>WE ARE A GROUP OF PASSIONATE TUTORS</b>
        \n\nTeaching is our passion which is contributing to someone’s life by sharing knowledge and experiencing pure joy of giving. We improve your concentration, confidence and interest in studies through engaging contents interactive discussions and personalised coaching, which will add a depth dimension to student’s educational experience.
        \n\n“A few hours with fastclas, you will learn more than you did in your class”
        \n\nCurrently we are launching our programs for graduate students of odisha, which has courses affiliated under UTKAL university, BERHAMPUR university, FAKIR MOHAN university and SAMBALPUR university. The desired courses can be directly learn from our learning FASTCLAS mobile application.
        \n\nFastclas learning mobile application will help students to access courses easily any time anywhere. We believe effective learning at individual place give learners an opportunity for self study and also give chance of self evaluation.
        </string>
    <string name="termsandconditionstext">Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.</string>
    <string name="helptext">Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.Contrary to the popular belief Lorem Ipsum is not simply random. It has roots in a piece of classical Latin literature.</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="reenternewpassword">Re-enter New Password</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="watched">Watched</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="post">Post</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="ask_a_question">Ask A Question</string>
    <string name="cancel">Cancel</string>
    <string name="read_more">Read More...</string>
    <string name="dummy1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="pls_check_internet">Please Check Internet Connection</string>
    <string name="some_thing_went_wrong">Something went wrong... Please try again</string>
    <string name="education">Education</string>
    <string name="send_otp_again">Send OTP again</string>
    <string name="please_enter_one_time_password_otp">Please Enter One Time Password(OTP)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_without_pay_you_will_be_able_to_access_only_3_sessions">* Note: Without pay you will be able to access only 3 sessions</string>
    <string name="semester_i">SEMESTER: I</string>
    <string name="subjects">Subject : </string>
    <string name="subject">Subjects </string>
    <string name="bsc_program">BSC PROGRAM:</string>
    <string name="no_data_found">No Data Found</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="thumbnail">thumbnail</string>
    <string name="play">play button</string>
    <string name="bottom_button">bottom button</string>
    <string name="write_your_question_here">Write Your Question here</string>
    <string name="answer">Answer</string>
    <string name="notes">Notes</string>
    <string name="payment">Payment</string>
    <string name="buy_subject">Payment</string>
    <string name="back">back</string>
    <string name="notification">notification</string>
    <string name="colon">:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="user">User</string>
    <string name="dashboard">Courses Offering</string>
    <string name="order">My Subjects</string>
    <string name="please_check_internet">Please Check Internet Connection</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="error">Error</string>
    <string name="tq_home"><b>Thank you for your patience</b>\n Uploading in Progress...</string>
    <string name="open_text">Opentext e-learning \nPrivate Limited</string>
    <string name="click_me">Click Me</string>
    <string name="proceed">Proceed</string>

</resources>
