<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/corners_white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_medium_15dp">


        <TextView
            android:id="@+id/txtOnetimepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_xmedium_20dp"
            android:text="@string/please_enter_one_time_password_otp"
            android:gravity="center"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/text_xmedium_16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otptext"
            android:textColor="@color/color_ash"
            android:textSize="@dimen/text_vsmall_10sp"
            android:layout_marginBottom="@dimen/space_xmedium_20dp"
            android:gravity="center"/>

        <EditText

            android:id="@+id/edtOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:hint="OTP"
            android:inputType="number"
            android:maxLines="1"
            android:layout_marginBottom="@dimen/space_small_10dp"
            android:padding="@dimen/space_medium_15dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_silver"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_xmedium_16sp"
            />
        <TextView
            android:id="@+id/txtOtpagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp_again"
            android:layout_gravity="end"
            android:textColor="@color/color_ash"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_medium_15dp"
            android:background="@drawable/rounded_corner"
            android:layout_centerInParent="true"
            android:paddingLeft="@dimen/space_xlarge_30dp"
            android:paddingRight="@dimen/space_xlarge_30dp"
            android:text="@string/submit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_xmedium_16sp" />
    </LinearLayout>
</LinearLayout>