<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fastclasbg"
    android:orientation="vertical"
    tools:context="com.versatile.fastclas.activities.RegisterActivity">

    <include layout="@layout/toolbar1" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_medium_15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_medium_15dp"
                android:text="@string/registration"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_xlarge_20sp" />

            <EditText
                android:id="@+id/edtFirstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_xmedium_20dp"
                android:background="@drawable/edittext_bg"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:drawableLeft="@drawable/fastclasusericon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/firstname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtLastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:drawableLeft="@drawable/fastclasusericon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/lastname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:drawableLeft="@drawable/gendericon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:drawableRight="@drawable/dropdownicon"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/gender"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtPhoneno"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:digits="0123456789"
                android:drawableLeft="@drawable/phonenumbericon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/phoneno"
                android:imeOptions="actionNext"
                android:inputType="phone|number"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/emailicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/passwordicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtConfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:drawableLeft="@drawable/passwordicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtState"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:drawableLeft="@drawable/stateicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:drawableRight="@drawable/dropdownicon"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/state"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtUniversity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:drawableLeft="@drawable/universityicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:drawableRight="@drawable/dropdownicon"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/university"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtCourse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:drawableLeft="@drawable/courseicon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:drawableRight="@drawable/dropdownicon"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/course"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <EditText
                android:id="@+id/edtSemester"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_5xlarge_50dp"
                android:layout_marginTop="@dimen/space_small_10dp"
                android:background="@drawable/edittext_bg"
                android:clickable="true"
                android:drawableLeft="@drawable/semestericon"
                android:drawablePadding="@dimen/space_vsmall_5dp"
                android:drawableRight="@drawable/dropdownicon"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/semester"
                android:longClickable="false"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_small_10dp"
                android:paddingRight="@dimen/space_small_10dp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_silver"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/text_xmedium_16sp" />

            <CheckBox
                android:id="@+id/chTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_vsmall_5dp"
                android:gravity="center"
                android:paddingRight="@dimen/space_medium_15dp"
                android:text="@string/termsandconditions"
                android:textColor="@color/color_silver"
                android:textSize="@dimen/text_small_12sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_xlarge_30dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_xmedium_16sp" />

            <TextView
                android:id="@+id/txtAlready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_xxlarge_35dp"
                android:layout_marginTop="@dimen/space_xxlarge_35dp"
                android:gravity="center"
                android:text="@string/alreadyhaveanaccount"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_vsmall_10sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
